# best_sampler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  decaykiller  makefile_defs.mk  pdgreader  pratt_sampler
best-sampler/: makefile_defs.mk
best-sampler/local/include/: part.h  randy.h  resonances.h
best-sampler/run/: samplermain.cc
best-sampler/software/include/: eos.h
best-sampler/software/src/: master.cc  parametermap.cc
doc/: header.tex  manual.aux  manual.out  manual.tex  viscoustest.aux  viscoustest.out  viscoustest.tex
local/include/: classdefs.h  master.h  sampler.h  sf.h  test.h
local/resinfo/spectralfunctions/: -100323.txt  -10213.txt  -10321.txt  -20213.txt  -329.txt  100111.txt  100223.txt  100331.txt  100333.txt  10221.txt  10225.txt  10323.txt  103316.txt  1116.txt  11212.txt  113.txt  1212.txt  13116.txt  13124.txt  13126.txt  13212.txt  13216.txt  13224.txt  13324.txt  19903129.txt  19922119.txt  19932119.txt  20223.txt  20313.txt  20315.txt  203312.txt  203316.txt  21112.txt  2118.txt  21214.txt  2124.txt  2128.txt  219.txt  22112.txt  2222.txt  (+38 more)
run/: decaykiller.cc  fcomp.py  makefile  sampler  samplermain.cc
scottrun/: CMakeLists.txt  bulktest.cc  hydroparameters.txt  hydroparameters_3D.txt  makefile  parameters.txt  pdgreader.cc  rhocount.cc  runvt.sh  samplermain.cc  samplertest.cc  samplertest_hydro.cc  sheartest.cc  spectraltest.cc  viscoustest.cc
scottrun/figs/: bulk.py  bulk_epiep.py  massdist.py  spectra_delta.py  spectra_rho.py
software/: CMakeLists.txt  makefile
software/include/: eos.h  hyper.h  misc.h  resonances.h  resonances.h.orig  sampler.h  sf.h  test.h
software/include/msu_sampler/: classdefs.h  constants.h  eos.h  hyper.h  master.h  meanfield.h  misc.h  parametermap.h  part.h  randy.h  resonances.h  sampler.h  sf.h
software/include/pratt_sampler/: classdefs.h  constants.h  eos.h  hyper.h  master.h  meanfield.h  misc.h  parametermap.h  part.h  randy.h  resonances.h  sampler.h  sf.h  test.h
software/resinfo/: hypercells.txt
software/resinfo/spectralfunctions/: -10325.txt  100113.txt  100221.txt  10111.txt  10115.txt  10223.txt  10331.txt  117.txt  12212.txt  12216.txt  12224.txt  12226.txt  13112.txt  13114.txt  13122.txt  13214.txt  13222.txt  13226.txt  20333.txt  203338.txt  215.txt  2216.txt  2224.txt  223.txt  3114.txt  3116.txt  3126.txt  317.txt  3216.txt  3218.txt  32212.txt  3224.txt  323.txt  331.txt  333.txt  335.txt  53122.txt  9000111.txt  9000221.txt  9010213.txt  (+9 more)
software/src/: bess.cc  eos.cc  eos.cc.orig  hyper.cc  makeparts.cc  makeparts.cc.orig  master.cc  master.cc.orig  meanfield.cc  misc.cc  parametermap.cc  part.cc  randy.cc  resinfo.cc  reslist.cc  resonances.cc  resonances.cc.orig  resonances_spectral.cc  sampler.cc  sampler.cc.orig  test.cc
test_run/: bose_test  bose_test.cc  bose_test.sh  fcomp.py  makefile  viscous_test  viscous_test.cc  viscous_test.sh
